fix: motto linie overflow hidden -> schein effekt nicht rechts zu sehen

--- a/sass/inhalt/ansprache/_motto.sass
+++ b/sass/inhalt/ansprache/_motto.sass
@@ -148,6 +148,7 @@
 			width: calc(50% + var(--correction) + var(--width) / 2)
 			display: flex
 			align-items: center
+			overflow: hidden
 
 			////background: red
 			//border: 2rem solid var(--farbe-sekundär)
